<resources>
    <string name="app_name">Github App</string>
    <string name="enter_username">Enter GitHub Username</string>
    <string name="search">Search</string>
    <string name="user_avatar">User Avatar</string>
    <string name="no_name">no-name</string>
    <string name="no_description">No description</string>
    <string name="stars">Stars</string>
    <string name="forks">Forks</string>
    <string name="githubber">GitHubber!</string>
    <string name="app_name_title">Github User Viewer</string>
    <string name="back">Back</string>
</resources>