...
                                items(repos) { repo ->
                                    RepoItem(
                                        repo = repo, onClick = {
                                            userViewModel.setSelectedRepo(repo)
                                            onRepoClick()
                                        },
                                        modifier = Modifier.testTag("repoItem")
                                    )
                                }
                            }
                        }
                    } else {
                        ProfileHeader(user)
...
